--- a/src/index.css
+++ b/src/index.css
@@ -72,28 +72,61 @@
 
   /* In your CSS file or a <style> tag */
 
-@keyframes fadeIn {
-    from {
-      opacity: 0;
-      transform: translateY(20px);
+  .scroll-container {
+    display: flex;
+    width: 100%;
+    overflow: hidden;
+    position: relative;
+    height: 200px; /* Adjust height as needed */
+    align-items: center;
+    margin-top: 20px; /* Add some margin if needed */
+}
+
+.scroll-img {
+    width: 20%;
+    flex-shrink: 0;
+    animation: scroll 10s linear infinite;
+    
+}
+
+@keyframes scroll {
+    
+    10% {
+      transform: translateX(-10%);
+   }
+    40% {
+    transform: translateX(-50%);
+   }
+    60%{
+      transform: translateX(-20%);
     }
-    to {
-      opacity: 1;
-      transform: translateY(0);
+    40%{
+      transform: translateX(10%);
     }
+    20%{
+      transform: translateX(-5%);
+    }
+    10%{
+      transform: translateX(0%);
+    }
+    20%{
+      transform: translateX(-10%);
+    }
+    40%{
+      transform: translateX(-60%);
+    }
+    1oo%{
+      transform: translateX(-50%);
+    }
+    50% {
+      transform: translateX(40%);
   }
+   10% {
+    transform: translateX(-10%);
+}
+  }
+
+
   
-  .fade-in {
-    animation: fadeIn 1.5s ease-out;
-  }
-  
-  .link-animate {
-    transition: background-color 0.9s, transform 2s;
-  }
-  
-  .link-animate:hover {
-    background-color: #2c2c2c;
-    transform: scale(1.1);
-  }
   
   
